Path flipping so that right side auto works as well as left side

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -3,14 +3,9 @@
   "robotLength": 0.965,
   "holonomicMode": true,
   "pathFolders": [
-    "CENTER.LEAVE",
     "CENTER.PLACE.G",
     "LEFT.J.K.L",
-    "LEFT.LEAVE",
-    "LEFT.PLACE.I",
-    "RIGHT.E.D.C",
-    "RIGHT.LEAVE",
-    "RIGHT.PLACE.E"
+    "RIGHT.E.D.C"
   ],
   "autoFolders": [
     "LEFT",
